[package]
name = "one-bit"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_gltf",
    "bevy_log",
    "bevy_pbr",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "png",
    "std",
    "web",
    "webgl2",
] }
bevy_enhanced_input = { version = "0.11", default-features = false }
bevy_mod_async = "0.10"
earcutr = "0.4"
futures = "0.3.31"
geo = "0.30"
